tmc-langs-qmake/src/test/resources/invalid_quick_project/src/qml.qrc
<RCC>
    <qresource prefix="/">
        <file>main.qml</file>
        <file>Clicker.qml</file>
    </qresource>
</RCC>
